--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,21 @@
     <title>Burger Queen</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#/">Inicio de sesión</a>
+                </li>
+                <li>
+                    <a href="#/Registro">Registro</a>
+                </li>
+                <li>
+                    <a href="#/Timeline">Pedidos</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <script type="module" src="main.js"></script>
 </body>
 </html>
